syntax = "proto3";
package proto;

message VASP {
    uint32 id = 1;
    Entity vaspEntity = 2;
    TRISACertification vaspTRISACertification = 3;
    string firstListed = 4;
    string lastUpdated = 5;
}

message Entity {
    uint32 id = 1;
    string vaspFullLegalName = 2;
    string vaspFullLegalAddress = 3;
    string vaspIncorporationDate = 4;
    string vaspIncorporationNumber = 5;
    string vaspLEINumber = 6;
}

message TRISACertification {
    uint32 id = 1;
    Name subjectName = 2;
    Name issuerName = 3;
    bytes serialNumber = 4;
    string version = 5;
    string signatureAlgorithm = 6;
    repeated string parameters = 7;
    string notValidBefore = 8;
    string notValidAfter = 9;
    PublicKeyInfo PublicKeyInfo = 10;
    bool revoked = 11;
}

message Name {
    uint32 id = 1;
    string commonName = 2;
    string countryRegion = 3;
    string organization = 4;
    string organizationalUnit = 5;
    string locality = 6;
    string stateProvince = 7;
    string serialNumber = 8;
    string incCountryRegion = 9;
    string incStateProvince = 10;
    string businessCategory = 11;
}

message PublicKeyInfo {
    uint32 id = 1;
    string algorithm = 2;
    repeated string parameters = 3;
    bytes publicKey = 4;
    int64 exponent = 5;
    int64 keySize = 6;
    repeated string keyUsage = 7;
    bytes signature = 8;
}